sas-core/main/default/objects/LIA_Claim__c/LIA_Claim__c.object-meta.xml
<CustomObject>
    <description>Contains the detailed information about a claim</description>
    <label>Claim</label>
    <nameField>
        <label>Claim Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claims</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>