sas-core/main/default/objects/LIA_Claim__c/fields/Address_line_1__c.field-meta.xml
<CustomField>
    <fullName>Address_line_1__c</fullName>
    <label>Address line 1</label>
    <length>35</length>
    <type>Text</type>
</CustomField>