sas-core/main/default/objects/LIA_Claim__c/fields/Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Number__c</fullName>
    <label>Bank Account Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>