sas-core/main/default/objects/LIA_Claim__c/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <label>Bank Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>