sas-core/main/default/objects/LIA_Claim__c/fields/BIC_Swift__c.field-meta.xml
<CustomField>
    <fullName>BIC_Swift__c</fullName>
    <label>BIC/Swift</label>
    <length>25</length>
    <type>Text</type>
</CustomField>