sas-core/main/default/objects/LIA_Claim__c/fields/Can_be_contacted_by_phone__c.field-meta.xml
<CustomField>
    <fullName>Can_be_contacted_by_phone__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Customer is okay to be contacted by phone</inlineHelpText>
    <label>Can be contacted by phone</label>
    <type>Checkbox</type>
</CustomField>