sas-core/main/default/objects/LIA_Claim__c/fields/CARE_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>CARE_Case_Number__c</fullName>
    <description>Number of the Complaint case related to the Liability Case</description>
    <inlineHelpText>Number of the Complaint case related to the Liability Case</inlineHelpText>
    <label>CARE Case Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>