sas-core/main/default/objects/LIA_Claim__c/fields/Claim_Firm__c.field-meta.xml
<CustomField>
    <fullName>Claim_Firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The claim firm that has submitted this claim.</description>
    <inlineHelpText>The claim firm that has submitted this claim.</inlineHelpText>
    <label>Claim Firm</label>
    <referenceTo>Claim_Firm__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>