sas-core/main/default/objects/LIA_Claim__c/fields/ClaimNumberReadOnly__c.field-meta.xml
<CustomField>
    <fullName>ClaimNumberReadOnly__c</fullName>
    <description>Field created to display the Claim Number in read-only</description>
    <formula>(Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Number</label>
    <type>Text</type>
</CustomField>