sas-core/main/default/objects/LIA_Claim__c/fields/Claims_Exist_In_CARE_For_PNR__c.field-meta.xml
<CustomField>
    <fullName>Claims_Exist_In_CARE_For_PNR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether claims exist in CARE for this claim&apos;s PNR.</description>
    <inlineHelpText>Whether claims exist in CARE for this claim&apos;s PNR.</inlineHelpText>
    <label>Claims Exist In CARE For PNR</label>
    <type>Checkbox</type>
</CustomField>