sas-core/main/default/objects/LIA_Claim__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <label>Comment</label>
    <length>4001</length>
    <type>LongTextArea</type>
</CustomField>