sas-core/main/default/objects/LIA_Claim__c/fields/Compensation_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Card_Number__c</fullName>
    <label>Compensation Card Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>