sas-core/main/default/objects/LIA_Claim__c/fields/Concerns_a_person_with_reduced_mobility__c.field-meta.xml
<CustomField>
    <fullName>Concerns_a_person_with_reduced_mobility__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the customer claim is related to a person with reduced mobility</description>
    <label>Concerns a person with reduced mobility</label>
    <type>Checkbox</type>
</CustomField>