sas-core/main/default/objects/LIA_Claim__c/fields/Concerns_an_unaccompanied_minor__c.field-meta.xml
<CustomField>
    <fullName>Concerns_an_unaccompanied_minor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Concerns an unaccompanied minor</label>
    <type>Checkbox</type>
</CustomField>