sas-core/main/default/objects/LIA_Claim__c/fields/Contact_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Full_Name__c</fullName>
    <label>Contact Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>