sas-core/main/default/objects/LIA_Claim__c/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <description>Use for emergency claims to identify who the contact is. It is important to differentiate whether it is the passenger(e.i. survivor) or relative of a passenger.</description>
    <inlineHelpText>In a emergency claim, it is important to who if we are in contact with the passenger or a relative of the passenger</inlineHelpText>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passenger</fullName>
            </value>
            <value>
                <fullName>Passenger&apos;s Relative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>