sas-core/main/default/objects/LIA_Claim__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
        <controllingField>Bank_Country__c</controllingField>
    </valueSet>
</CustomField>