sas-core/main/default/objects/LIA_Claim__c/fields/Customer_agrees_on_the_terms_and_conditi__c.field-meta.xml
<CustomField>
    <fullName>Customer_agrees_on_the_terms_and_conditi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer agrees on the terms and conditi</label>
    <type>Checkbox</type>
</CustomField>