sas-core/main/default/objects/LIA_Claim__c/fields/Customer_Claim_Category__c.field-meta.xml
<CustomField>
    <fullName>Customer_Claim_Category__c</fullName>
    <label>Customer Claim Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baggage</fullName>
            </value>
            <value>
                <fullName>Flight disruptions</fullName>
            </value>
            <value>
                <fullName>Travel extras bought not rendered</fullName>
            </value>
            <value>
                <fullName>Flight experience</fullName>
            </value>
            <value>
                <fullName>Airport experience</fullName>
            </value>
            <value>
                <fullName>Booking</fullName>
            </value>
            <value>
                <fullName>Accident &amp; injury</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>