sas-core/main/default/objects/LIA_Claim__c/fields/Customer_Reason_for_EU261_Claim__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reason_for_EU261_Claim__c</fullName>
    <label>Customer Reason for EU261 Claim</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delayed flight</fullName>
            </value>
            <value>
                <fullName>Cancelled flight</fullName>
            </value>
            <value>
                <fullName>Missed connecting flight</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>