sas-core/main/default/objects/LIA_Claim__c/fields/Customer_s_Reference__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Reference__c</fullName>
    <label>Customer&apos;s Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>