sas-core/main/default/objects/LIA_Claim__c/fields/Date_of_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Receipt__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>When the lawsuit was received</description>
    <label>Date of Receipt</label>
    <type>Date</type>
</CustomField>