sas-core/main/default/objects/LIA_Claim__c/fields/Delay_Length__c.field-meta.xml
<CustomField>
    <fullName>Delay_Length__c</fullName>
    <description>Indicates the delay of the baggage. This value is important in handling baggage related claims</description>
    <label>Delay Length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than 21 days</fullName>
            </value>
            <value>
                <fullName>21 days or more</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>