sas-core/main/default/objects/LIA_Claim__c/fields/EU261_Handling_Instructions__c.field-meta.xml
<CustomField>
    <fullName>EU261_Handling_Instructions</fullName>
    <label>EU261 Handling Instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>