sas-core/main/default/objects/LIA_Claim__c/fields/EU261_Handling_Note__c.field-meta.xml
<CustomField>
    <fullName>EU261_Handling_Note__c</fullName>
    <label>EU261 Handling note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>