sas-core/main/default/objects/LIA_Claim__c/fields/EU261_Handling_Status__c.field-meta.xml
<CustomField>
    <fullName>EU261_Handling_Status__c</fullName>
    <label>EU261 Handling Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unhandled</fullName>
                <default>true</default>
                <label>Unhandled</label>
            </value>
            <value>
                <fullName>Eligible for compensation</fullName>
            </value>
            <value>
                <fullName>Ineligible for compensation</fullName>
            </value>
            <value>
                <fullName>Unable to handle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>