sas-core/main/default/objects/LIA_Claim__c/fields/EuroBonus_Number__c.field-meta.xml
<CustomField>
    <fullName>EuroBonus_Number__c</fullName>
    <label>EuroBonus Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>