sas-core/main/default/objects/LIA_Claim__c/fields/Eurobonus_Points_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Eurobonus_Points_Compensation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether or not a liability claim was compensated with Eurobonus points</description>
    <label>Eurobonus Points Compensation</label>
    <type>Checkbox</type>
</CustomField>