sas-core/main/default/objects/LIA_Claim__c/fields/External_Case_Number_Court_Reference__c.field-meta.xml
<CustomField>
    <fullName>External_Case_Number_Court_Reference__c</fullName>
    <label>External Case Number/Court Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>