sas-core/main/default/objects/LIA_Claim__c/fields/External_Data_Retrieve_Count__c.field-meta.xml
<CustomField>
    <fullName>External_Data_Retrieve_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>How many times data retrieval has been attempted</description>
    <label>External Data Retrieve Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>