sas-core/main/default/objects/LIA_Claim__c/fields/External_Data_Status__c.field-meta.xml
<CustomField>
    <fullName>External_Data_Status__c</fullName>
    <description>Status to show availability of data in external systems such as EDW.</description>
    <label>External Data Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Unavailable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>