sas-core/main/default/objects/LIA_Claim__c/fields/Fees__c.field-meta.xml
<CustomField>
    <fullName>Fees__c</fullName>
    <description>Fees related to the liability claim</description>
    <label>Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>