sas-core/main/default/objects/LIA_Claim__c/fields/Fees_Paid__c.field-meta.xml
<CustomField>
    <fullName>Fees_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether or not the fees needed to be paid</description>
    <inlineHelpText>Please check it as true when the fees needed to be paid</inlineHelpText>
    <label>Fees Paid</label>
    <type>Checkbox</type>
</CustomField>