sas-core/main/default/objects/LIA_Claim__c/fields/Has_been_sent_to_settle__c.field-meta.xml
<CustomField>
    <fullName>Has_been_sent_to_settle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the liability claim has been sent to settle</description>
    <label>Has been sent to settle</label>
    <type>Checkbox</type>
</CustomField>