sas-core/main/default/objects/LIA_Claim__c/fields/Interest_Paid__c.field-meta.xml
<CustomField>
    <fullName>Interest_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please check it as true when interest is paid</inlineHelpText>
    <label>Interest Paid</label>
    <type>Checkbox</type>
</CustomField>