sas-core/main/default/objects/LIA_Claim__c/fields/IsMerged__c.field-meta.xml
<CustomField>
    <fullName>IsMerged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this claim is duplicated since the Liability Case has been merged with another Liability Case</description>
    <inlineHelpText>Indicates that this claim is duplicated since the Liability Case has been merged with another Liability Case making this Claim trivial</inlineHelpText>
    <label>IsMerged</label>
    <type>Checkbox</type>
</CustomField>