sas-core/main/default/objects/LIA_Claim__c/fields/Last_Checked_Claims_From_CARE__c.field-meta.xml
<CustomField>
    <fullName>Last_Checked_Claims_From_CARE__c</fullName>
    <description>Timestamp for when the existence of claims with the same PNR as this one in CARE was checked.</description>
    <inlineHelpText>Timestamp for when the existence of claims with the same PNR as this one in CARE was checked.</inlineHelpText>
    <label>Last Checked Claims From CARE</label>
    <type>DateTime</type>
</CustomField>