sas-core/main/default/objects/LIA_Claim__c/fields/Legal_Conclusion__c.field-meta.xml
<CustomField>
    <fullName>Legal_Conclusion__c</fullName>
    <label>Legal Conclusion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pax entitled to compensation</fullName>
            </value>
            <value>
                <fullName>Extraordinary circumstances not proven</fullName>
            </value>
            <value>
                <fullName>Additional reasonable measures not taken</fullName>
            </value>
            <value>
                <fullName>Extraordinary circumstances and additional reasonable measures proven</fullName>
            </value>
            <value>
                <fullName>Claim firm not eligible to represent pax</fullName>
            </value>
            <value>
                <fullName>Claim submitted too late</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>