sas-core/main/default/objects/LIA_Claim__c/fields/LIA_Firm__c.field-meta.xml
<CustomField>
    <fullName>LIA_Firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Legal firm who is representing the customer</description>
    <inlineHelpText>Legal firm if representing the passenger</inlineHelpText>
    <label>Legal Firm</label>
    <referenceTo>LIA_Firm__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>