sas-core/main/default/objects/LIA_Claim__c/fields/LIA_Major_Event__c.field-meta.xml
<CustomField>
    <fullName>LIA_Major_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Major Event</label>
    <referenceTo>LIA_Major_Event__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>