sas-core/main/default/objects/LIA_Claim__c/fields/Liability_Claim_Comments__c.field-meta.xml
<CustomField>
    <fullName>Liability_Claim_Comments__c</fullName>
    <description>Field use for comments</description>
    <label>Liability Claim Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>