sas-core/main/default/objects/LIA_Claim__c/fields/Liability_Claim_Type__c.field-meta.xml
<CustomField>
    <fullName>Liability_Claim_Type__c</fullName>
    <label>Liability Claim Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EU261 Fixed Compensation</fullName>
            </value>
            <value>
                <fullName>Downgrading/Denied boarding</fullName>
            </value>
            <value>
                <fullName>Ticket refund</fullName>
            </value>
            <value>
                <fullName>Personal injury</fullName>
            </value>
            <value>
                <fullName>Unruly passenger</fullName>
            </value>
            <value>
                <fullName>Baggage</fullName>
            </value>
            <value>
                <fullName>Sales information</fullName>
            </value>
            <value>
                <fullName>EuroBonus</fullName>
            </value>
            <value>
                <fullName>PRM</fullName>
            </value>
            <value>
                <fullName>UM</fullName>
            </value>
            <value>
                <fullName>Travel extras</fullName>
            </value>
            <value>
                <fullName>Care costs</fullName>
            </value>
            <value>
                <fullName>Damages</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>