sas-core/main/default/objects/LIA_Claim__c/fields/Monetary_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Monetary_Compensation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether or not a liability claim was compensated with money</description>
    <label>Monetary Compensation</label>
    <type>Checkbox</type>
</CustomField>