sas-core/main/default/objects/LIA_Claim__c/fields/Name_of_Judicial_Body__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Judicial_Body__c</fullName>
    <description>The name of the Judicial body</description>
    <label>Name of Judicial Body</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Jurisdiction__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agencia Estatal de Seguridad Aerea (AESA, Spain)</fullName>
            </value>
            <value>
                <fullName>Allmänna reklamationsnämnden (Sweden)</fullName>
            </value>
            <value>
                <fullName>Amstgericht (Court, Germany)</fullName>
            </value>
            <value>
                <fullName>Athens Court</fullName>
            </value>
            <value>
                <fullName>Attunda tingsrätt (Sweden)</fullName>
            </value>
            <value>
                <fullName>Autoridade Nacional da Aviação Civil (ANAC, Portugal)</fullName>
            </value>
            <value>
                <fullName>Bezirksgericht für Handelssachen Wien (Germany)</fullName>
            </value>
            <value>
                <fullName>Bezirksgericht in Handelssachen Wien (Austria)</fullName>
            </value>
            <value>
                <fullName>Bundesministerium für Verkehr, Innovation und Technologie (BMVIT, Austria)</fullName>
            </value>
            <value>
                <fullName>Byretten Aalborg</fullName>
            </value>
            <value>
                <fullName>Byretten Kolding</fullName>
            </value>
            <value>
                <fullName>Byretten København</fullName>
            </value>
            <value>
                <fullName>Byretten Randers</fullName>
            </value>
            <value>
                <fullName>CAA (UK Civil Aviation Authority)</fullName>
            </value>
            <value>
                <fullName>Castlebar Court Office (Ireland)</fullName>
            </value>
            <value>
                <fullName>Center for Klageløsning (Denmark)</fullName>
            </value>
            <value>
                <fullName>Civilinés Aviacijos Administracia (Lithuania)</fullName>
            </value>
            <value>
                <fullName>Commission for Aviation Regulation (CAR, Ireland)</fullName>
            </value>
            <value>
                <fullName>Consumer Right Protection Center (Latvia)</fullName>
            </value>
            <value>
                <fullName>County Court at Cardiff (Wales)</fullName>
            </value>
            <value>
                <fullName>County Court at Liverpool (United Kingdom)</fullName>
            </value>
            <value>
                <fullName>County Court at Portsmouth</fullName>
            </value>
            <value>
                <fullName>Croatian Civil Aviation Agency (Croatia)</fullName>
            </value>
            <value>
                <fullName>De Inspectie Leefomgeving en Transport  (ILT, Netherlands)</fullName>
            </value>
            <value>
                <fullName>Direction générale de l&apos;aviation civile (DGAC, France)</fullName>
            </value>
            <value>
                <fullName>District Court of Netherland (Netherland)</fullName>
            </value>
            <value>
                <fullName>Ente Nazionale per l&apos;Aviazione Civile (ENAC, Italy)</fullName>
            </value>
            <value>
                <fullName>Federal Office of Civil Aviation (FOCA, Switzerland)</fullName>
            </value>
            <value>
                <fullName>Forliksrådet i Norge (Norway)</fullName>
            </value>
            <value>
                <fullName>German Luftfahrt-Bundesamt (LBA, Germany)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>