sas-core/main/default/objects/LIA_Claim__c/fields/Name_of_Passenger_s__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Passenger_s__c</fullName>
    <description>Passengers who are making the claim</description>
    <inlineHelpText>Passenger(s) who are making the claim</inlineHelpText>
    <label>Name of Passenger(s)</label>
    <type>TextArea</type>
</CustomField>