sas-core/main/default/objects/LIA_Claim__c/fields/Preferred_Compensation_Method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Compensation_Method__c</fullName>
    <label>Preferred Compensation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EuroBonus Points</fullName>
            </value>
            <value>
                <fullName>Monetary</fullName>
            </value>
            <value>
                <fullName>Voucher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>