sas-core/main/default/objects/LIA_Claim__c/fields/Principal__c.field-meta.xml
<CustomField>
    <fullName>Principal__c</fullName>
    <description>Principal amount in the liability claim</description>
    <label>Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>