sas-core/main/default/objects/LIA_Claim__c/fields/Principal_Paid__c.field-meta.xml
<CustomField>
    <fullName>Principal_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether or not the claim amount needs to be paid</description>
    <inlineHelpText>Please check it as true when the claim amount is paid</inlineHelpText>
    <label>Principal Paid</label>
    <type>Checkbox</type>
</CustomField>