sas-core/main/default/objects/LIA_Claim__c/fields/Purchase_Currency__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Currency__c</fullName>
    <label>Purchase Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>