sas-core/main/default/objects/LIA_Claim__c/fields/Purchase_Year__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Year__c</fullName>
    <description>Purchase Year of the baggage</description>
    <inlineHelpText>YYYY Format</inlineHelpText>
    <label>Purchase Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>